feat: get all destinations and update OpenAPI spec
